luanti/http-route.yaml
# http-route.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: luanti
  namespace: niklastverdal
spec:
  parentRefs:
    - name: gke-gateway
      namespace: gateway
  hostnames:
    - luanti-niklastverdal.s9n.no
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: luanti
          port: 30000
